src/test/deca/context/valid/with_object/public_method_args.deca
class A {
    void method(int x, float f){
        print(x, f);
    }
    boolean inv(boolean b){
        return !b;
    }
}

{
    A a = new A();
    a.method(1, 2);
    if(a.inv(false)){
        print("It must print this !");
    }
}