src/test/deca/context/invalid/oracle/redefinition_method_return_subtype.deca
class A{
    int x;
}

class B extends A{
    float f;
}

class C{
    B f(int i) {
        return new B();
    }
}

class D extends C{
    A f(int i){
        return new A();
    }
}